set visibility: visible on transparent element to resolve ios rendering issue

--- a/www/css/custom.css
+++ b/www/css/custom.css
@@ -24,11 +24,12 @@
 }
 
 .navbar-collapse {
-    background-color: rgb(0, 123, 255) !important;
+    background-color: rgb(0, 123, 255, 0.7) !important;
     padding-left: 20px;
     border-radius: 25px;
     position: relative;
     top: 10px;
+    visibility: visible;
 }
 
 .nav-link {
